<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout4"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.clyste.jf_dl_final_babyhealth.CreateNewEvent">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/eventTitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/feedingTitle"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/diaperFrame"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/feedingStopButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eventTitleText">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textDiaperContents"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/diaperContents" />

            <CheckBox
                android:id="@+id/peeBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/pee"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <CheckBox
                android:id="@+id/poopBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/poop"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/peeBox" />


            <!--Border Line from SO: https://stackoverflow.com/questions/5049852/android-drawing-separator-divider-line-in-layout-->
            <View
                android:id="@+id/borderline"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:id="@+id/poopColorsLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textPoopColors"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/poopColors"
                    tools:layout_editor_absoluteX="99dp"
                    tools:layout_editor_absoluteY="226dp" />
            </LinearLayout>

        </LinearLayout>

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/feedingFrame"
        android:layout_width="match_parent"
        android:layout_height="511dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/feedingStopButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eventTitleText"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/textDuration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/duration"
            app:layout_constraintEnd_toEndOf="@+id/editFeedingVolume"
            app:layout_constraintStart_toStartOf="@+id/editFeedingVolume"
            app:layout_constraintTop_toBottomOf="@+id/editFeedingVolume"
            tools:layout_conversion_absoluteHeight="20dp"
            tools:layout_conversion_absoluteWidth="1dp" />

        <TextView
            android:id="@+id/eventHeaderText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/volume"
            app:layout_constraintEnd_toEndOf="@+id/editFeedingVolume"
            app:layout_constraintStart_toStartOf="@+id/editFeedingVolume"
            app:layout_constraintTop_toBottomOf="@+id/feedingStartButton"
            tools:layout_conversion_absoluteHeight="19dp"
            tools:layout_conversion_absoluteWidth="84dp" />

        <EditText
            android:id="@+id/editFeedingVolume"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/eventHeaderText"
            tools:layout_conversion_absoluteHeight="46dp"
            tools:layout_conversion_absoluteWidth="215dp"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="8dp" />

        <Button
            android:id="@+id/feedingStartButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/start"
            app:layout_constraintEnd_toEndOf="@+id/editFeedingVolume"
            app:layout_constraintStart_toStartOf="@+id/editFeedingVolume"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_conversion_absoluteHeight="48dp"
            tools:layout_conversion_absoluteWidth="88dp" />

    </android.support.constraint.ConstraintLayout>

    <Button
        android:id="@+id/feedingStopButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/end"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/homeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/eventToggleButton"
        android:layout_width="91dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/diaperTitle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/feedingStopButton"
        app:layout_constraintStart_toEndOf="@+id/homeButton" />

</android.support.constraint.ConstraintLayout>
